# ted2srt

./: .editorconfig  .gitignore  .travis.yml  Foundation.hs  LICENSE  Model.hs  README.md  Settings.hs  Ted.hs  fetch.hs  main.hs  server.hs  ted2srt.cabal  ted2srt.hs
.circleci/: config.yml
.github/: FUNDING.yml
Handler/: Util.hs
Ted/: Fallback.hs  Types.hs
Web/: TED.hs
Web/TED/: API.hs  Feed.hs  TalkPage.hs  Types.hs
app/: .gitignore  bower.json  config.xml  gulpfile.babel.js  ionic.project  package.json
app/scss/: ionic.app.scss
app/src/: index.html
app/src/js/: controllers.js  filters.js  services.js
app/src/templates/: talks.html
app/www/: index.html
app/www/css/: ionic.app.css  ionic.app.min.css  style.css
app/www/js/: app.js  controllers.js  directives.js  filters.js  services.js
app/www/templates/: talk.html  talks.html
backend/: .env.example  .sosrc  .stylish-haskell.yaml  default.nix  package.yaml  shell.nix  stack.yaml  ted2srt.nix
backend/app/: fetch.hs  main.hs
backend/deploy/: nginx.conf
backend/scripts/: build.sh  cabal2nix.sh
backend/sql/: latest.sql  pg_dump.sh
backend/src/: Config.hs  Model.hs  Server.hs  Static.hs  Types.hs
backend/src/Api/: Search.hs  Subtitles.hs  Talks.hs
backend/src/Handler/: Bundle.hs  Home.hs  Subtitles.hs  Talks.hs
backend/src/Models/: RedisKeys.hs  Talk.hs  Types.hs
backend/src/View/: Bundle.hs  Error.hs  Home.hs  Layout.hs  Search.hs  Talk.hs
backend/src/Web/: TED.hs
backend/src/Web/TED/: API.hs  TalkPage.hs  Types.hs
backend/test/: before.sh
backend/test/fixtures/: data.sql  pg_dump.sh  truncate.sql
backend/tests/: ted2srt.hs
config/: models
frontend/: .gitignore  .jshintrc  bower.json  deploy.sh  package.json  packages.dhall  postcss.config.js  psc-package.json  shell.nix  spago.dhall  tailwind.js  tsconfig.json  webpack.config.js
frontend/elm-src/: LocalStorage.elm
frontend/elm-src/Components/Loading/: Loading.elm  index.css
frontend/elm-src/Components/SearchForm/: index.css
frontend/elm-src/TalkPage/: Sidebar.elm
frontend/scripts/: build.sh
frontend/src/: Home.purs  HomePage.ts  Ports.elm  Route.elm  Search.purs  SearchPage.ts  Talk.purs  TalkPage.elm  TalkPage.ts  Utils.elm  common.css  index.html  purs.d.ts
frontend/src/Component/: Footer.purs  Header.purs
frontend/src/Components/Header/: Header.elm
frontend/src/Core/: Api.purs  Model.purs  Prelude.purs
frontend/src/Home/: App.purs  main.css
frontend/src/HomePage/: index.css
frontend/src/Search/: App.purs  main.css
frontend/src/Talk/: App.purs  Sidebar.purs  Types.purs  Util.purs  main.css
frontend/src/TalkPage/: index.css
frontend/src/css/: global.css  media-query.css
frontend/src/styles/: Link.css
nix/: all.nix  nixpkgs.nix
nix/pkgs/: with-utf8.nix
server/: .env.example  .env.test  README.md  Settings.hs  default.nix  deploy.sh  docs.hs  fetch.hs  package.yaml  server.hs  stack.yaml  ted2srt.cabal
server/Handler/: Util.hs
server/ReTed/: API.hs  Types.hs
server/Settings/: StaticFiles.hs
server/Web/: TED.hs
server/Web/TED/: API.hs  TalkPage.hs  Types.hs
server/app/: fetch.hs  main.hs  server.hs
server/deploy/: nginx.conf
server/sql/: latest.sql
server/src/: Config.hs  Model.hs  Server.hs
server/src/Handler/: Search.hs  Talks.hs
server/src/Models/: Talk.hs  Types.hs
server/src/ReTed/: API.hs  Config.hs  Types.hs
server/src/ReTed/Models/: RedisKeys.hs  Talk.hs
server/src/Web/: TED.hs
server/src/Web/TED/: API.hs  Feed.hs  TalkPage.hs  Types.hs
server/static/tmp/: 4hyit1OL.css  ChnsTpoW.js  I65oXka4.js  NWNNfZs2.css  OSmLCEjD.js  UOP_YucC.js  WODYFFgz.js  chELurZu.js  cktLn6rI.css  tHfJdJgx.css  urd41gjC.css
server/templates/: 404.hamlet  about.hamlet  footer.hamlet  search.hamlet  talks.hamlet  watch.hamlet
server/test/: Main.hs  before.sh
server/test/ReTed/: ApiSpec.hs  TestUtils.hs
server/test/fixtures/: data.sql  pg_dump.sh
server/tests/: ted.hs
templates/: about.hamlet  default.cassius  footer.hamlet  homepage.cassius  homepage.hamlet  result.cassius  result.hamlet  result.julius  search.hamlet  talks.hamlet  talks.julius  topbar.hamlet  watch.hamlet  watch.julius
tests/: main.hs  ted.hs  ted2srt.hs
web/: README.md  bower.json  deploy.sh  elm-package.json  gulpfile.js  package.json  postcss.config.js  tsconfig.json  webpack.config.js
web/app/: index.html  search.xml
web/app/scripts/: http.js  main.js  search-page.js  talk-page.js  util.js
web/app/scripts/controllers/: home.js  search.js  talk.js
web/app/scripts/models/: talks.js  util.js  utils.js
web/app/scripts/views/: home.js  search.js  talk.js
web/app/styles/: main.css  main.less
web/app/styles/base/: custom_media.css  elements.css
web/app/styles/components/: aside.css  container.css  downloads.css  featured_talks.css  footer.css  header.css  languages.css  layout.css  loading.css  logo.css  media.css  panel.css  player.css  search_form.css  site.css  talk.css  variables.css
web/app/styles/utils/: spacing.css
web/deploy/: nginx.conf
web/src/: ErrorPage.elm  HomePage.elm  Main.elm  MainCss.elm  NotFoundPage.elm  Route.elm  SearchPage.elm  Stylesheets.elm  TalkPage.elm  Utils.elm  index.html  main.css  main.d.ts  main.js  main.ts  search.xml
web/src/Components/Footer/: Footer.elm
web/src/Components/Header/: Header.elm
web/src/Components/SearchForm/: SearchForm.elm
web/src/Models/: Talk.elm  talk.ts
web/src/SearchPage/: index.css
web/src/TalkPage/: Header.elm  Sidebar.elm  sidebar.css
web/src/components/SearchForm/: SearchForm.elm
web/src/components/footer/: index.css  index.ts
web/src/css/: color.css  global.css
web/src/home-page/: home.component.ts  home.service.ts  index.html  index.ts
web/src/models/: Talk.elm  http.ts  talk.ts
web/src/search-page/: index.ts  search.component.ts  search.service.ts
web/src/services/: http.ts  store.ts  utils.ts
web/src/talk-page/: index.css  index.ts  sidebar.css  sidebar.ts  talk.component.ts  talk.service.ts
web/test/: karma.conf.js
web/test/e2e/: home.js  talk.js
web/test/spec/: talk-page.js
(+5 files in other folders)
