name:                ted2srt
version:             1.20131225
synopsis:            Watch and download TED talks with bilingual subtitles.
-- description:
homepage:            http://ted2srt.org
license:             PublicDomain
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ted2srt
    main-is:             ted2srt.hs
    -- other-modules:
    other-extensions:    DeriveGeneric, OverloadedStrings, DeriveDataTypeable, GADTs, FlexibleContexts, TemplateHaskell, TypeFamilies, CPP, MultiParamTypeClasses, QuasiQuotes
    build-depends:    base == 4.*
                    , aeson >=0.6 && <0.7
                    , blaze-markup >=0.5 && <0.6
                    , bytestring >=0.10 && <0.11
                    , conduit >=1.0 && <1.1
                    , data-default >=0.5 && <0.6
                    , directory >=1.2 && <1.3
                    , fast-logger >= 2.0
                    , hamlet >=1.1 && <1.2
                    , hjsmin >=0.1 && <0.2
                    , http-conduit >=2.0 && <2.1
                    , http-types >=0.8 && <0.9
                    , html-conduit >=1.1 && <1.2
                    , lifted-base >=0.2 && <0.3
                    , monad-logger >= 0.3
                    , persistent >=1.2 && <1.3
                    , persistent-postgresql >=1.2 && <1.3
                    , regex-posix >=0.95 && <0.96
                    , shakespeare-css >=1.0 && <1.1
                    , shakespeare-js >=1.2 && <1.3
                    , system-filepath >=0.4 && <0.5
                    , template-haskell >=2.8 && <2.9
                    , text >=0.11 && <0.12
                    , unordered-containers >=0.2 && <0.3
                    , wai-logger >= 2.0
                    , xml-conduit >=1.1 && <1.2
                    , yesod >=1.2 && <1.3
                    , yesod-core >= 1.2
                    , yesod-static >=1.2 && <1.3
  -- hs-source-dirs:
    cpp-options:         -DPRODUCTION
    ghc-options:         -Wall -fno-warn-unused-do-bind -O2
    default-language:    Haskell2010
