name:                ted2srt
version:             1.20140105
synopsis:            Watch and download TED talks with bilingual subtitles.
-- description:
homepage:            http://ted2srt.org
license:             PublicDomain
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    exposed-modules:  Web.TED
    other-modules:    Web.TED.API
                    , Web.TED.TalkPage
    build-depends:    base == 4.*
                    , aeson >=0.6 && <0.7
                    , bytestring >=0.10 && <0.11
                    , conduit >=1.0 && <1.1
                    , directory >=1.2 && <1.3
                    , html-conduit >=1.1 && <1.2
                    , http-conduit >=2.0 && <2.1
                    , http-types >=0.8 && <0.9
                    , old-locale
                    , regex-posix >=0.95 && <0.96
                    , text >=0.11 && <0.12
                    , time
                    , unordered-containers >=0.2 && <0.3
                    , xml-conduit >=1.1 && <1.2
    ghc-options:         -Wall -fno-warn-unused-do-bind
    default-language:    Haskell2010

executable fetch
    main-is:            fetch.hs
    default-extensions: OverloadedStrings
    build-depends:    base == 4.*
                    , aeson >=0.6 && <0.7
                    , bytestring >=0.10 && <0.11
                    , conduit >=1.0 && <1.1
                    , directory >=1.2 && <1.3
                    , html-conduit >=1.1 && <1.2
                    , http-conduit >=2.0 && <2.1
                    , http-types >=0.8 && <0.9
                    , old-locale
                    , persistent >=1.2 && <1.3
                    , persistent-postgresql >=1.2 && <1.3
                    , regex-posix >=0.95 && <0.96
                    , text >=0.11 && <0.12
                    , time
                    , transformers
                    , unordered-containers >=0.2 && <0.3
                    , xml-conduit >=1.1 && <1.2
                    , yaml
                    , yesod >=1.2 && <1.3
                    , ted2srt
    ghc-options:         -Wall -fno-warn-unused-do-bind -O2
    default-language:    Haskell2010

executable ted2srt
    main-is:            ted2srt.hs
    -- other-modules:
    default-extensions: OverloadedStrings
    other-extensions:   DeriveGeneric, DeriveDataTypeable, GADTs, FlexibleContexts, TemplateHaskell, TypeFamilies, CPP, MultiParamTypeClasses, QuasiQuotes
    build-depends:    base == 4.*
                    , aeson >=0.6 && <0.7
                    , bytestring >=0.10 && <0.11
                    , conduit >=1.0 && <1.1
                    , directory >=1.2 && <1.3
                    , blaze-markup >=0.5 && <0.6
                    , data-default >=0.5 && <0.6
                    , fast-logger >= 2.0
                    , hamlet >=1.1 && <1.2
                    , hjsmin >=0.1 && <0.2
                    , html-conduit >=1.1 && <1.2
                    , http-conduit >=2.0 && <2.1
                    , http-types >=0.8 && <0.9
                    , lifted-base >=0.2 && <0.3
                    , monad-logger >= 0.3
                    , old-locale
                    , persistent >=1.2 && <1.3
                    , persistent-postgresql >=1.2 && <1.3
                    , regex-posix >=0.95 && <0.96
                    , shakespeare-css >=1.0 && <1.1
                    , shakespeare-js >=1.2 && <1.3
                    , system-filepath >=0.4 && <0.5
                    , template-haskell >=2.8 && <2.9
                    , text >=0.11 && <0.12
                    , time
                    , unordered-containers >=0.2 && <0.3
                    , wai-logger >= 2.0
                    , xml-conduit >=1.1 && <1.2
                    , yesod >=1.2 && <1.3
                    , yesod-core >= 1.2
                    , yesod-static >=1.2 && <1.3
                    , ted2srt
  -- hs-source-dirs:
    cpp-options:         -DPRODUCTION
    ghc-options:         -Wall -fno-warn-unused-do-bind -O2
    default-language:    Haskell2010
