name:                ted2srt
version:             2.20150622
synopsis:            Watch and download TED talks with bilingual subtitles.
-- description:
homepage:            http://ted2srt.org
license:             PublicDomain
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    exposed-modules:  Web.TED
    other-modules:    Web.TED.API
                    , Web.TED.TalkPage
    build-depends:    base == 4.*
                    , aeson >= 0.7
                    , bytestring >= 0.10
                    , conduit >= 1.1
                    , containers >= 0.5
                    , directory >= 1.2
                    , html-conduit >= 1.1
                    , http-conduit >= 2.1
                    , http-types >= 0.8
                    , regex-posix >= 0.95
                    , text >= 1.1
                    , time
                    , unordered-containers >= 0.2
                    , vector
                    , xml-conduit >= 1.2
    ghc-options:         -Wall -fno-warn-unused-do-bind
    default-language:    Haskell2010

executable fetch
    main-is:            fetch.hs
    default-extensions: OverloadedStrings
    build-depends:    base == 4.*
                    , aeson >= 0.7
                    , bytestring >= 0.10
                    , conduit >= 1.1
                    , containers >= 0.5
                    , directory >= 1.2
                    , hedis >= 0.6
                    , html-conduit >= 1.1
                    , http-conduit >= 2.1
                    , http-types >= 0.8
                    , regex-posix >= 0.95
                    , text >= 1.1
                    , time
                    , transformers
                    , unordered-containers >= 0.2
                    , vector
                    , xml-conduit >= 1.2
                    , ted2srt
    ghc-options:         -Wall -fno-warn-unused-do-bind -O2
    default-language:    Haskell2010

executable server
    main-is:            server.hs
    default-extensions: OverloadedStrings
    build-depends:    base == 4.*
                    , aeson >= 0.7
                    , bytestring >= 0.10
                    , conduit >= 1.1
                    , containers >= 0.5
                    , directory >= 1.2
                    , either
                    , hedis >= 0.6
                    , html-conduit >= 1.1
                    , http-conduit >= 2.1
                    , http-types >= 0.8
                    , regex-posix >= 0.95
                    , servant-server >= 0.4
                    , system-filepath
                    , text >= 1.1
                    , time
                    , transformers
                    , unordered-containers >= 0.2
                    , vector
                    , wai
                    , wai-extra
                    , warp
                    , xml-conduit >= 1.2
                    , ted2srt
    ghc-options:         -Wall -fno-warn-unused-do-bind -O2
    default-language:    Haskell2010

