name:                ted2srt
version:             2.20150710
synopsis:            Watch and download TED talks with bilingual subtitles.
-- description:
homepage:            http://ted2srt.org
license:             PublicDomain
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:   src
    exposed-modules:  Web.TED
                    , ReTed.API
    other-modules:    Web.TED.API
                    , Web.TED.Feed
                    , Web.TED.TalkPage
                    , Web.TED.Types
                    , ReTed.Types
    build-depends:    base == 4.*
                    , aeson >= 0.7
                    , bytestring >= 0.10
                    , conduit >= 1.1
                    , containers >= 0.5
                    , directory >= 1.2
                    , either
                    , hedis >= 0.6
                    , html-conduit >= 1.1
                    , http-conduit >= 2.1
                    , http-types >= 0.8
                    , random
                    , regex-posix >= 0.95
                    , text >= 1.1
                    , servant-server == 0.5.*
                    , system-filepath
                    , time
                    , transformers
                    , unordered-containers >= 0.2
                    , vector
                    , wai
                    , xml-conduit >= 1.2
    ghc-options:         -Wall -fno-warn-unused-do-bind
    default-language:    Haskell2010

executable fetch
    main-is:          fetch.hs
    build-depends:    base == 4.*
                    , aeson >= 0.7
                    , bytestring >= 0.10
                    , conduit >= 1.1
                    , containers >= 0.5
                    , directory >= 1.2
                    , hedis >= 0.6
                    , html-conduit >= 1.1
                    , http-conduit >= 2.1
                    , http-types >= 0.8
                    , regex-posix >= 0.95
                    , text >= 1.1
                    , time
                    , transformers
                    , unordered-containers >= 0.2
                    , vector
                    , xml-conduit >= 1.2
                    , ted2srt
    ghc-options:        -Wall -fno-warn-unused-do-bind -O2
    default-extensions: OverloadedStrings
    default-language:   Haskell2010

executable server
    main-is:          server.hs
    build-depends:    base == 4.*
                    , ted2srt
                    , hedis >= 0.6
                    , load-env
                    , servant-server == 0.5.*
                    , wai
                    , wai-extra
                    , warp
    ghc-options:        -Wall -fno-warn-unused-do-bind -O2
    default-extensions: OverloadedStrings
    default-language:   Haskell2010
